--- a/index.html
+++ b/index.html
@@ -5,14 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css"
+    />
     <title>Responsive</title>
   </head>
   <body>
     <main>
       <section class="sec-img">
         <img
+          srcset="
+            /exercise/images/resized/astro-250x250.jpg 250w,
+            /exercise/images/resized/astro-500x500.jpg 500w,
+            /exercise/images/resized/astro-750x750.jpg 750w
+          "
+          sizes="(min-width: 1880px) 750px, 
+                 (min-width: 1400px) 500px, 
+                 (min-width: 1050px) 250px"
           class="image-clip"
-          src="/exercise/images/resized/astro-750x750.jpg"
+          src="/exercise/images/resized/astro-250x250.jpg"
           alt="astronaut"
         />
       </section>
